--- a/app/src/main/res/layout/navigation_bar_activity.xml
+++ b/app/src/main/res/layout/navigation_bar_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <com.google.android.material.circularreveal.CircularRevealFrameLayout
         android:layout_width="match_parent"
@@ -10,7 +11,13 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/button_nav"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/blue"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            android:layout_gravity="bottom"
+            app:menu="@menu/menu_but_nav"
+            >
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
