--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/photo3">
 
 
-    <TextView
+    <EditText
         android:id="@+id/username"
         android:layout_width="275dp"
         android:layout_height="45dp"
@@ -19,10 +19,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.202">
 
-    </TextView>
+    </EditText>
 
-    <TextView
-        android:id="@+id/textView"
+    <EditText
+        android:id="@+id/password"
         android:layout_width="275dp"
         android:layout_height="45dp"
         android:background="@color/white"
@@ -34,10 +34,12 @@
         app:layout_constraintVertical_bias="0.327" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login1"
         android:layout_width="154dp"
         android:layout_height="63dp"
-        android:text="Button"
+        android:text="ورود"
+        android:textSize="25dp"
+        app:backgroundTint="#0FCF16"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
