--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -8,10 +8,13 @@
 
 
     <EditText
-        android:id="@+id/username"
-        android:layout_width="275dp"
+        android:id="@+id/username_login"
+        android:layout_width="290dp"
         android:layout_height="45dp"
-        android:background="@color/white"
+        android:paddingRight="15dp"
+        android:text="نام کاربری"
+        android:background="@color/light_blue"
+        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -22,10 +25,13 @@
     </EditText>
 
     <EditText
-        android:id="@+id/password"
-        android:layout_width="275dp"
+        android:id="@+id/password_login"
+        android:layout_width="290dp"
         android:layout_height="45dp"
-        android:background="@color/white"
+        android:paddingRight="15dp"
+        android:text="رمزعبور(حداقل پنج کارکتر)"
+        android:background="@color/light_blue"
+        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -34,12 +40,13 @@
         app:layout_constraintVertical_bias="0.327" />
 
     <Button
-        android:id="@+id/login1"
+        android:id="@+id/login_login"
         android:layout_width="154dp"
         android:layout_height="63dp"
         android:text="ورود"
         android:textSize="25dp"
         app:backgroundTint="#0FCF16"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
