--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#01A2EC</color>
+    <color name="gray">#626262</color>
+    <color name="light_blue">#D5E6FF</color>
 </resources>
