second day commit

--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -12,9 +12,10 @@
         android:layout_width="290dp"
         android:layout_height="45dp"
         android:paddingRight="15dp"
-        android:text="نام کاربری"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:hint="@string/username"
+        android:textColor="@color/black"
         android:background="@color/light_blue"
-        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -31,8 +32,9 @@
         android:layout_height="45dp"
         android:background="@color/light_blue"
         android:paddingRight="15dp"
-        android:text="رمزعبور(حداقل پنج کارکتر)"
-        android:textColor="@color/gray"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:hint="@string/password"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -46,8 +48,9 @@
         android:layout_height="45dp"
         android:background="@color/light_blue"
         android:paddingRight="15dp"
-        android:text="اطمینان برای رمز عبور"
-        android:textColor="@color/gray"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:hint="@string/confirmPassword"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
