--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/photo3">
@@ -12,9 +11,10 @@
         android:layout_width="290dp"
         android:layout_height="45dp"
         android:paddingRight="15dp"
-        android:text="نام کاربری"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:hint="@string/username"
+        android:textColor="@color/black"
         android:background="@color/light_blue"
-        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -29,9 +29,10 @@
         android:layout_width="290dp"
         android:layout_height="45dp"
         android:paddingRight="15dp"
-        android:text="رمزعبور(حداقل پنج کارکتر)"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:hint="@string/password"
+        android:textColor="@color/black"
         android:background="@color/light_blue"
-        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -43,7 +44,7 @@
         android:id="@+id/login_login"
         android:layout_width="154dp"
         android:layout_height="63dp"
-        android:text="ورود"
+        android:text="@string/loginBotrom"
         android:textSize="25dp"
         app:backgroundTint="#0FCF16"
         android:textStyle="bold"
