--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#01A2EC</color>
     <color name="gray">#626262</color>
     <color name="light_blue">#D5E6FF</color>
+    <color name="background_blue">#FF053A88</color>
 </resources>
