--- a/app/src/main/res/layout/navigation_bar_activity.xml
+++ b/app/src/main/res/layout/navigation_bar_activity.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/photo3">
     
     <com.google.android.material.circularreveal.CircularRevealFrameLayout
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
             android:id="@+id/button_nav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue"
+            android:background="@color/background_blue"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
             android:layout_gravity="bottom"
