--- a/app/src/main/res/layout/navigation_bar_activity.xml
+++ b/app/src/main/res/layout/navigation_bar_activity.xml
@@ -6,13 +6,14 @@
     android:background="@drawable/photo3">
     
     <com.google.android.material.circularreveal.CircularRevealFrameLayout
+        android:id="@+id/frag_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/button_nav"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:background="@color/background_blue"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
