--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.427"/>
 
     <Button
-        android:id="@+id/login_register"
+        android:id="@+id/register_button"
         android:layout_width="154dp"
         android:layout_height="63dp"
         android:text="ورود"
