--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,6 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/photo3">
+
+    <LinearLayout
+        android:layout_width="354dp"
+        android:layout_height="160dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/dark_blue"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/now_name"
+            android:layout_width="311dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="60dp"
+            android:background="@color/dark_blue_edit"
+            android:hint="نام کاربری جدید"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light">
+        </EditText>
+
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="118dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="128dp"
+            android:layout_marginBottom="0dp"
+            android:text="تغییر نام کاربری"
+            app:backgroundTint="@color/green" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="360dp"
+        android:layout_height="238dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/dark_blue"
+        android:orientation="vertical"
+        android:paddingTop="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.528">
+
+        <EditText
+            android:id="@+id/now_password"
+            android:layout_width="311dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/dark_blue_edit"
+            android:hint="رمز عبور فعلی"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/new_password"
+            android:layout_width="311dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/dark_blue_edit"
+            android:hint="رمز عبور جدید(حداقل پنج کاراکتر)"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light">
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/new_password_again"
+            android:layout_width="311dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/dark_blue_edit"
+            android:hint="تکرار رمز عبور"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light">
+
+        </EditText>
+
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="118dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="128dp"
+            android:layout_marginBottom="0dp"
+            android:text="تغییر رمز عبور"
+            app:backgroundTint="@color/green" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
