--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -7,56 +7,78 @@
     android:background="@drawable/photo3">
 
 
-    <EditText
-        android:id="@+id/username_register"
-        android:layout_width="290dp"
-        android:layout_height="45dp"
-        android:paddingRight="15dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:hint="@string/username"
-        android:textColor="@color/black"
-        android:background="@color/light_blue"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:layout_width="370dp"
+        android:layout_height="240dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="124dp"
+        android:background="@color/dark_blue"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202">
+        app:layout_constraintTop_toTopOf="parent">>
 
-    </EditText>
+        <EditText
+            android:id="@+id/username_register"
+            android:layout_width="290dp"
+            android:layout_height="45dp"
+            android:paddingRight="15dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="40dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:hint="@string/username"
+            android:textColor="@color/white_light"
+            android:background="@color/dark_blue_edit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.202">
+
+        </EditText>
 
 
-    <EditText
-        android:id="@+id/password_register"
-        android:layout_width="290dp"
-        android:layout_height="45dp"
-        android:background="@color/light_blue"
-        android:paddingRight="15dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:hint="@string/password"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.33" />
+        <EditText
+            android:id="@+id/password_register"
+            android:layout_width="290dp"
+            android:layout_height="45dp"
+            android:background="@color/dark_blue_edit"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="10dp"
+            android:paddingRight="15dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:hint="@string/password"
+            android:textColor="@color/white_light"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.512"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.33" />
 
-    <EditText
-        android:id="@+id/confirm_password_register"
-        android:layout_width="290dp"
-        android:layout_height="45dp"
-        android:background="@color/light_blue"
-        android:paddingRight="15dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:hint="@string/confirmPassword"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.427"/>
+        <EditText
+            android:id="@+id/confirm_password_register"
+            android:layout_width="290dp"
+            android:layout_height="45dp"
+            android:background="@color/dark_blue_edit"
+            android:paddingRight="15dp"
+            android:layout_marginLeft="40dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:hint="@string/confirmPassword"
+            android:textColor="@color/white_light"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.512"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.427"/>
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/register_button"
@@ -65,13 +87,13 @@
         android:text="ورود"
         android:textSize="25dp"
         android:textStyle="bold"
-        app:backgroundTint="#0FCF16"
+        app:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintVertical_bias="0.6"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
