--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/photo3">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="354dp"
         android:layout_height="160dp"
         android:layout_alignParentBottom="true"
@@ -22,16 +23,15 @@
             android:layout_width="311dp"
             android:layout_height="44dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="60dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="60dp"
             android:background="@color/dark_blue_edit"
             android:hint="نام کاربری جدید"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:textColor="@color/white"
-            android:textColorHint="@color/white_light">
-        </EditText>
+            android:textColorHint="@color/white_light"></EditText>
 
         <Button
             android:layout_width="120dp"
@@ -118,5 +118,23 @@
             app:backgroundTint="@color/green" />
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/audio_but"
+        android:layout_width="95dp"
+        android:layout_height="82dp"
+        android:background="@color/green"
+        android:clickable="true"
+        android:scaleType="center"
+        app:fabCustomSize="83dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:rippleColor="#FFFFFF"
+        app:srcCompat="@drawable/ic_audio"
+        app:maxImageSize="35dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
