--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -30,7 +30,8 @@
             android:layout_marginBottom="40dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:hint="@string/username"
-            android:textColor="@color/white_light"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light"
             android:background="@color/dark_blue_edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +53,8 @@
             android:paddingRight="15dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:hint="@string/password"
-            android:textColor="@color/white_light"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.512"
@@ -69,7 +71,8 @@
             android:layout_marginLeft="40dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:hint="@string/confirmPassword"
-            android:textColor="@color/white_light"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.512"
