--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#01A2EC</color>
     <color name="gray">#626262</color>
-    <color name="light_blue">#D5E6FF</color>
+    <color name="light_blue">#99BFDC</color>
     <color name="background_blue">#FF053A88</color>
     <color name="dark_blue">#C3060B33</color>
     <color name="dark_blue_edit">#E9060B33</color>
